[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
derive_more = "0.99.17"
lerp = { version = "0.4.0", features = ["derive"] }
rayon = "1.5.3"
rand = "0.8.5"